# EqnConc

./: .gitignore  AB2.json  AB3.json  CMakeLists.txt  input.json
include/: AbstractEqnConc.h  EqnConc.h  EqnConc_2.h  EqnConc_3.h
src/: main.cpp
